# CMakeSeries

Ep002/source/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep005/source/include/: ImageProcessing.h  operations.h
Ep007/source/: CMakeLists.txt  main.cpp
Ep007/source/include/: ImageProcessing.h  operations.h
Ep007/source/logger/include/: log.h
Ep007/source/logger/src/: log.cpp
Ep007/source/src/: imageprocessing.cpp  operations.cpp
Ep008/: CMakeLists.txt
Ep008/src/math/include/: supermath.h
Ep008/src/math/src/: supermath.cpp
Ep009/: CMakeLists.txt
Ep009/src/math/: math.cmake
Ep009/src/stats/: stats.cmake
Ep010/src/: main.cpp
Ep010/src/math/: CMakeLists.txt
Ep010/src/stats/: CMakeLists.txt
Ep010/src/stats/include/: stats.h
Ep010/src/stats/src/: stats.cpp
Ep011/: 1-message.cmake  2-variables.cmake  3-list_option.cmake  4-flow_control.cmake  5-loops.cmake  6-functions.cmake  7-macros.cmake
Ep10/: CMakeLists.txt
