cmake_minimum_required(VERSION 3.5)
project(HelloApp VERSION 0.0.1 DESCRIPTION "hello world app" LANGUAGES CXX)
file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")
add_executable(HelloApp main.cpp ${SOURCE_FILES})
#add_executable(HelloApp main.cpp src/imageprocessing.cpp src/operations.cpp)
target_compile_features(HelloApp PRIVATE cxx_std_11)
target_include_directories(HelloApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include) 